maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: missing arguments for method getIndication in class ShortestPathMaze;
follow this method with `_' if you want to treat it as a partially applied function
      if (getIndication==count) {
          ^